# chemistry_parser

./: Cargo.toml  Makefile  README.md
data/: elements.csv  equations.txt
src/: chem.pest  element.rs  lib.rs  main.rs
tests/: grammar_tests.rs  parse_tests.rs  parser_tests.rs
