[package]
name = "chemistry_parser"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A parser for the analysis of chemical elements, formulas and equations."
repository = "https://github.com/lillydaystar/chemistry_parser"
readme = "README.md"

[dependencies]
anyhow = "1.0.93"
csv = "1.3.0"
fmt = "0.1.0"
pest = "2.7.14"
pest_derive = "2.7.14"
thiserror = "2.0.2"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
